--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,11 +1,7 @@
 *{
-	box-sizing: border-box;
 	margin:0;
 	padding:0;
-}
-header a{
-	text-decoration: none;
-	color: white;
+	box-sizing: border-box;
 }
 header{
 	height: 50px;
@@ -16,27 +12,37 @@ header{
 	justify-content: space-around;
 	opacity: 0.8;
 	align-items: center;
+	position: fixed;
+	top:0;
+}
+header a{
+	color: white;
+	text-decoration: none;
 }
 header div{
 	font-weight: bold;
 	display: inline-flex;
 }
 body{
-	background-image: url('background.jpg'); 
-	background-position: center calc(0% + 50px);
-	background-size: 33%;
-	background-repeat: repeat-x; 
-	display:flex;
-	justify-content: space-around;
-	background-color:black;
-	flex-wrap:wrap;
+	background-image: url('b6.jpg'); 
+	background-position: center center;
+	background-size: 100% auto;
+	background-color:white;
+	background-attachment: fixed;
 
 }
 .content{
-	margin-top: 10%;
+	display: flex;
+	justify-content: space-around;
+	margin-top: 20%;
+	flex-wrap: wrap;
+	background-color: rgba(0,0,0,0.5);
+	border-radius: 40px;
 }
 
 .post{
+	opacity: 1;
+	width: 300px;
 	margin:20px;
 	border-radius: 2%;
 	background: white;
@@ -60,8 +66,7 @@ img{
 	flex-wrap:wrap;
 }
 .post h3{
-	display: inline;
-	margin:10%;
-	font-size: 80%;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap:wrap;
 }
-
